# kuasar

./: Makefile  Makefile.e2e  README.md
.github/workflows/: ci.yml  e2e.yml
docs/resource_slot/: IMPLEMENTATION.md  README.md
examples/resource_slot/: README.md  container-config.json  pod-config.yaml  runtime-class.yaml  test-sandbox.sh
hack/: e2e-test.sh  local-up-kuasar.sh  verify-e2e.sh
resource_slot/: Cargo.toml  README.md  deny.toml
resource_slot/service/: kuasar-resource-slot.service
resource_slot/src/: args.rs  main.rs  sandbox.rs  version.rs
test/e2e/: README.md
test/e2e/configs/: container-resource-slot.yaml  sandbox-wasm.yaml
test/e2e/src/: lib.rs  main.rs  tests.rs
tests/basics/: README.md  container-wasmedge.yaml  local-up-kuasar.sh  sandbox-resource-slot.yaml
tests/deprecated/: README.md  test-kuasar.sh  test-resource-slot.sh  test-runc.sh  test-wasmedge.sh
tests/e2e/configs/: container-wasm.yaml
tests/e2e/src/: lib.rs  main.rs  tests.rs
tests/scripts/: resource-slot-structure-test.sh  resource-slot-test.sh
wasm/: Cargo.toml
